Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/generics/diamond/neg/Neg09d.out
Neg09d.java:16:33: compiler.err.doesnt.exist: Neg09
1 error
